Fix text overflow in message details

--- a/public/css/messageDetails.css
+++ b/public/css/messageDetails.css
@@ -7,7 +7,7 @@ body{
     padding: 10px 20px;
     border-radius: 5px;
     border: var(--border);
-    min-width: 500px;
+    min-width: 700px;
 }
 
 .user-name{
@@ -18,6 +18,10 @@ body{
 .message-text{
     color: var(--text-dark);
     font-size: 1rem;
+    width: 600px;
+    max-width: 600px;
+    text-wrap: wrap;
+    word-wrap: break-word;
 }
 
 .date{
